internal enum BaseRulesStrategyType
{
    American,
    Brazilian,
    International
}