internal enum PieceType
{
    Pawn,
    King
}