public enum GameColor
{
    Light,
    Dark
}