using System.Collections.Generic;

internal class PreparedMovementMarker
{
    internal Tile Tile;
    internal Piece Piece;
    internal List<Piece> CapturablePieces;
}